--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   routemaster: ^1.0.1
   dotted_border: ^2.0.0+3
   file_picker: ^5.2.3
+  any_link_preview: ^2.0.9
+  shared_preferences: ^2.0.15
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
